Bug 1922570 - Show global actions on seperate row from heuristic. r=daisuke,desktop-theme-reviewers,urlbar-reviewers,dao
Differential Revision: https://phabricator.services.mozilla.com/D225051

UltraBlame original commit: ba16cea2ed41efb892287a8442e490e5507fc9a8

--- a/browser/themes/shared/urlbarView.css
+++ b/browser/themes/shared/urlbarView.css
@@ -749,21 +749,25 @@ background
 -
 color
 :
-light
+color
 -
-dark
+mix
 (
-white
+in
+srgb
 var
 (
 -
 -
-color
+urlbarView
 -
-gray
+hover
 -
-90
+background
 )
+50
+%
+transparent
 )
 ;
 -
@@ -776,74 +780,19 @@ button
 -
 hover
 -
-color
-:
-light
--
-dark
-(
-var
-(
--
--
-color
--
-gray
--
-70
-)
-var
-(
--
--
-color
--
-gray
--
-05
-)
-)
-;
--
--
-urlbarView
--
-action
--
-button
--
-selected
--
-color
-:
-light
--
-dark
-(
-var
-(
--
--
-color
--
-gray
--
-90
-)
-var
-(
--
--
-urlbarView
--
-action
--
-button
--
 background
 -
 color
-)
+:
+var
+(
+-
+-
+urlbarView
+-
+hover
+-
+background
 )
 ;
 &
@@ -8608,19 +8557,19 @@ size
 :
 smaller
 ;
-color
+font
+-
+weight
 :
 var
 (
 -
 -
-toolbar
+font
 -
-field
+weight
 -
-focus
--
-color
+bold
 )
 ;
 border
@@ -8682,21 +8631,19 @@ background
 color
 )
 ;
-box
+margin
 -
-shadow
+inline
+-
+end
 :
-0
-0px
-4px
-rgba
+var
 (
-0
-0
-0
-0
-.
-23
+-
+-
+space
+-
+large
 )
 ;
 >
@@ -8736,23 +8683,6 @@ opacity
 :
 hover
 {
-color
-:
-var
-(
--
--
-urlbarView
--
-result
--
-button
--
-hover
--
-color
-)
-;
 background
 -
 color
@@ -8768,6 +8698,8 @@ action
 button
 -
 hover
+-
+background
 -
 color
 )
@@ -8777,70 +8709,21 @@ color
 [
 selected
 ]
-{
-color
+&
 :
-light
--
-dark
-(
-var
-(
--
--
-urlbarView
--
-result
--
-button
--
 hover
--
-color
-)
+:
+active
+{
+outline
+:
 var
 (
 -
--
-toolbar
--
-field
 -
 focus
 -
-color
-)
-)
-;
-background
--
-color
-:
-var
-(
--
--
-urlbarView
--
-action
--
-button
--
-selected
--
-color
-)
-;
-border
--
-color
-:
-light
--
-dark
-(
-transparent
-white
+outline
 )
 ;
 }
