Bug 1925366 - Render an empty state for null passwords. r=rsafaeian,fluent-reviewers,credential-management-reviewers,bolsson
Differential Revision: https://phabricator.services.mozilla.com/D226042

UltraBlame original commit: 15012a3c79c1f2871548e560bf26a630a82fa00a

--- a/toolkit/components/satchel/megalist/content/megalist.css
+++ b/toolkit/components/satchel/megalist/content/megalist.css
@@ -1424,6 +1424,12 @@ styles
 password
 -
 card
+.
+empty
+-
+state
+-
+card
 {
 margin
 -
@@ -1752,4 +1758,45 @@ color
 active
 )
 ;
+}
+.
+no
+-
+logins
+-
+card
+-
+buttons
+{
+display
+:
+flex
+;
+flex
+-
+direction
+:
+column
+;
+gap
+:
+var
+(
+-
+-
+space
+-
+small
+)
+;
+>
+moz
+-
+button
+{
+width
+:
+100
+%
+}
 }
