Bug 1921460 - Update image and text on "no network" error page r=pollymce,android-reviewers
[[ https://www.figma.com/design/yawrXicozZQ2zvLYsjdQBb/Error-Pages?node-id=4703-5667&node-type=instance&m=dev | Figma reference ]]

Replacing "No Internet" error page's text and image in low_and_medium_risk_error_pages.html. Using lowMediumErrorPages.js to style the new layout to match figma.

Differential Revision: https://phabricator.services.mozilla.com/D223952

UltraBlame original commit: de72e3d60c7c7b140827b38ad945a16612c912dd

--- a/mobile/android/android-components/components/ui/icons/src/main/res/values/mozac_ui_icons_strings.xml
+++ b/mobile/android/android-components/components/ui/icons/src/main/res/values/mozac_ui_icons_strings.xml
@@ -253,6 +253,24 @@ false
 name
 =
 "
+mozac_error_no_internet_connection
+"
+>
+mozac_error_no_internet_connection
+<
+/
+string
+>
+<
+string
+translatable
+=
+"
+false
+"
+name
+=
+"
 mozac_error_asleep
 "
 >
