--- a/mobile/android/fenix/app/src/main/assets/shared_error_style.css
+++ b/mobile/android/fenix/app/src/main/assets/shared_error_style.css
@@ -747,6 +747,12 @@ height
 100
 %
 ;
+align
+-
+content
+:
+center
+;
 }
 /
 *
@@ -889,5 +895,44 @@ justify
 content
 :
 center
+;
+}
+#
+imageContainer
+{
+display
+:
+flex
+;
+align
+-
+items
+:
+center
+;
+justify
+-
+content
+:
+center
+;
+}
+#
+errorLongContent
+{
+margin
+:
+16px
+0px
+;
+}
+#
+errorTryAgain
+{
+margin
+-
+top
+:
+16px
 ;
 }
