Bug 1924591 - Improve contrast for multiselect labels on about:welcome r=omc-reviewers,mviar
Differential Revision: https://phabricator.services.mozilla.com/D226405

UltraBlame original commit: e986498f204281b98294b3a49f6713afcbb48639

--- a/browser/components/aboutwelcome/content-src/aboutwelcome.scss
+++ b/browser/components/aboutwelcome/content-src/aboutwelcome.scss
@@ -9468,16 +9468,6 @@ media
 (
 prefers
 -
-contrast
-:
-no
--
-preference
-)
-and
-(
-prefers
--
 color
 -
 scheme
@@ -9489,6 +9479,29 @@ color
 :
 #
 CFCFD8
+;
+}
+media
+(
+prefers
+-
+contrast
+)
+{
+color
+:
+var
+(
+-
+-
+in
+-
+content
+-
+page
+-
+color
+)
 ;
 }
 }
