--- a/browser/components/aboutwelcome/content/aboutwelcome.css
+++ b/browser/components/aboutwelcome/content/aboutwelcome.css
@@ -32028,16 +32028,6 @@ media
 (
 prefers
 -
-contrast
-:
-no
--
-preference
-)
-and
-(
-prefers
--
 color
 -
 scheme
@@ -32058,6 +32048,39 @@ color
 :
 #
 CFCFD8
+;
+}
+}
+media
+(
+prefers
+-
+contrast
+)
+{
+.
+onboardingContainer
+.
+multi
+-
+select
+-
+container
+{
+color
+:
+var
+(
+-
+-
+in
+-
+content
+-
+page
+-
+color
+)
 ;
 }
 }
