Bug 1925409 - Allow creating windows for printing even with coop. r=nika
Differential Revision: https://phabricator.services.mozilla.com/D226466

UltraBlame original commit: 7624273ffd39c1a0571196d25b403f021dcb640a

--- a/toolkit/components/printing/tests/file_coop_header.html
+++ b/toolkit/components/printing/tests/file_coop_header.html
@@ -14,12 +14,6 @@ utf
 "
 >
 <
-html
->
-<
-body
->
-<
 p
 >
 Hello
@@ -29,10 +23,149 @@ world
 p
 >
 <
-/
-body
+iframe
+id
+=
+"
+iframe
+"
 >
 <
 /
+iframe
+>
+<
+script
+>
+onload
+=
+function
+(
+)
+{
+let
+iframe
+=
+document
+.
+getElementById
+(
+"
+iframe
+"
+)
+;
+switch
+(
+location
+.
+search
+)
+{
+case
+"
+?
+print
+"
+:
+window
+.
+print
+(
+)
+;
+break
+;
+case
+"
+?
+print
+-
+same
+-
+origin
+-
+frame
+"
+:
+iframe
+.
+src
+=
+/
+document
+-
+builder
+.
+sjs
+?
 html
+=
+Hello
+<
+script
+>
+print
+(
+)
+<
+\
+/
+script
+>
+;
+break
+;
+case
+"
+?
+print
+-
+cross
+-
+origin
+-
+frame
+"
+:
+iframe
+.
+src
+=
+https
+:
+/
+/
+example
+.
+org
+/
+document
+-
+builder
+.
+sjs
+?
+html
+=
+Hello
+<
+script
+>
+print
+(
+)
+<
+\
+/
+script
+>
+;
+break
+;
+}
+}
+<
+/
+script
 >
