Bug 1925643 - Show Firefox chicklet on chrome privileged pages r=urlbar-reviewers,mak
Differential Revision: https://phabricator.services.mozilla.com/D226395

UltraBlame original commit: a4f3a01dc359a8b62b70972e6d7a523cec0b9c98

--- a/browser/themes/shared/identity-block/identity-block.css
+++ b/browser/themes/shared/identity-block/identity-block.css
@@ -289,12 +289,6 @@ pageproxystate
 invalid
 "
 ]
-#
-identity
--
-box
-.
-chromeUI
 {
 display
 :
@@ -566,6 +560,66 @@ margin
 0
 ;
 }
+/
+*
+stylelint
+-
+disable
+-
+next
+-
+line
+media
+-
+query
+-
+no
+-
+invalid
+*
+/
+media
+not
+(
+(
+-
+moz
+-
+bool
+-
+pref
+:
+"
+browser
+.
+urlbar
+.
+searchModeSwitcher
+.
+featureGate
+"
+)
+or
+(
+-
+moz
+-
+bool
+-
+pref
+:
+"
+browser
+.
+urlbar
+.
+scotchBonnet
+.
+enableOverride
+"
+)
+)
+{
 #
 identity
 -
@@ -602,6 +656,7 @@ end
 :
 8px
 ;
+}
 }
 #
 identity
