Bug 1921335 - Newtab update story impressions rotation logic r=home-newtab-reviewers,nbarrett
Differential Revision: https://phabricator.services.mozilla.com/D223849

UltraBlame original commit: 6b221a125656b42f2ebb3f278d01ed5c4281c506

--- a/browser/components/newtab/content-src/components/DiscoveryStreamAdmin/DiscoveryStreamAdmin.scss
+++ b/browser/components/newtab/content-src/components/DiscoveryStreamAdmin/DiscoveryStreamAdmin.scss
@@ -701,6 +701,26 @@ secondary
 }
 }
 .
+large
+-
+data
+-
+container
+{
+max
+-
+height
+:
+500px
+;
+overflow
+-
+y
+:
+scroll
+;
+}
+.
 sourceLabel
 {
 background
