--- a/browser/components/newtab/css/activity-stream.css
+++ b/browser/components/newtab/css/activity-stream.css
@@ -29169,6 +29169,30 @@ discoverystream
 -
 admin
 .
+large
+-
+data
+-
+container
+{
+max
+-
+height
+:
+500px
+;
+overflow
+-
+y
+:
+scroll
+;
+}
+.
+discoverystream
+-
+admin
+.
 sourceLabel
 {
 background
