Bug 1925488 - Remove inline command handlers from the customization panel. r=Gijs
Differential Revision: https://phabricator.services.mozilla.com/D226128

UltraBlame original commit: 34ec9200657af9376ed4f221cdc314aadcf58756

--- a/browser/components/customizableui/content/customizeMode.inc.xhtml
+++ b/browser/components/customizableui/content/customizeMode.inc.xhtml
@@ -374,51 +374,6 @@ customization
 -
 checkbox
 "
-#
-NB
-:
-because
-oncommand
-fires
-after
-click
-by
-the
-time
-we
-'
-ve
-fired
-the
-checkbox
-binding
-#
-will
-already
-have
-switched
-the
-button
-'
-s
-state
-so
-this
-is
-correct
-:
-oncommand
-=
-"
-gCustomizeMode
-.
-toggleTitlebar
-(
-this
-.
-checked
-)
-"
 data
 -
 l10n
@@ -496,6 +451,8 @@ target
 =
 this
 )
+ToolbarContextMenu
+.
 onViewToolbarsPopupShowing
 (
 event
@@ -697,19 +654,6 @@ resetUIDensity
 )
 ;
 "
-oncommand
-=
-"
-gCustomizeMode
-.
-setUIDensity
-(
-this
-.
-mode
-)
-;
-"
 /
 >
 <
@@ -807,19 +751,6 @@ gCustomizeMode
 .
 resetUIDensity
 (
-)
-;
-"
-oncommand
-=
-"
-gCustomizeMode
-.
-setUIDensity
-(
-this
-.
-mode
 )
 ;
 "
@@ -926,19 +857,6 @@ resetUIDensity
 )
 ;
 "
-oncommand
-=
-"
-gCustomizeMode
-.
-setUIDensity
-(
-this
-.
-mode
-)
-;
-"
 >
 <
 /
@@ -1002,18 +920,6 @@ touch
 mode
 -
 checkbox
-"
-oncommand
-=
-"
-gCustomizeMode
-.
-updateAutoTouchMode
-(
-this
-.
-checked
-)
 "
 /
 >
@@ -1100,19 +1006,6 @@ footer
 -
 button
 "
-oncommand
-=
-"
-gCustomizeMode
-.
-togglePong
-(
-this
-.
-checked
-)
-;
-"
 hidden
 =
 "
@@ -1158,16 +1051,6 @@ hidden
 =
 "
 true
-"
-oncommand
-=
-"
-gCustomizeMode
-.
-customizeTouchBar
-(
-)
-;
 "
 data
 -
@@ -1231,16 +1114,6 @@ hidden
 "
 true
 "
-oncommand
-=
-"
-gCustomizeMode
-.
-undoReset
-(
-)
-;
-"
 data
 -
 l10n
@@ -1268,16 +1141,6 @@ customization
 reset
 -
 button
-"
-oncommand
-=
-"
-gCustomizeMode
-.
-reset
-(
-)
-;
 "
 data
 -
@@ -1313,16 +1176,6 @@ customization
 done
 -
 button
-"
-oncommand
-=
-"
-gCustomizeMode
-.
-exit
-(
-)
-;
 "
 data
 -
