Bug 1923052 - Show private browsing indicator icon in navbar when vertical tabs are enabled r=desktop-theme-reviewers,sidebar-reviewers,fluent-reviewers,jsudiaman,dao,sfoster
Differential Revision: https://phabricator.services.mozilla.com/D226377

UltraBlame original commit: 0d13448b2fe7517a893c1bae88ac677c37425fca

--- a/browser/themes/shared/browser-shared.css
+++ b/browser/themes/shared/browser-shared.css
@@ -3896,7 +3896,7 @@ browsing
 indicator
 *
 /
-#
+.
 private
 -
 browsing
@@ -3931,11 +3931,77 @@ temporary
 ]
 )
 &
+#
+nav
+-
+bar
+:
+not
+(
+[
+tabs
+-
+hidden
+]
+)
+>
+&
 {
 display
 :
 none
 ;
+}
+#
+nav
+-
+bar
+[
+tabs
+-
+hidden
+]
+>
+&
+{
+margin
+-
+inline
+-
+end
+:
+12px
+;
+/
+*
+Hide
+the
+private
+browsing
+indicator
+label
+when
+vertical
+tabs
+are
+enabled
+*
+/
+>
+.
+private
+-
+browsing
+-
+indicator
+-
+label
+{
+display
+:
+none
+;
+}
 }
 }
 .
