Bug 1926359 - Add tab group line to dragged tabs when dragging into a group. r=dwalker,tabbrowser-reviewers
Ideally the line should cover the whole group, but I don't know that we can do this given our use of display:contents. If someone has ideas we can file a followup on that. As it stands the line will extend under dragged tabs themselves, but left or right from those there can be gaps in the line.

Differential Revision: https://phabricator.services.mozilla.com/D226634

UltraBlame original commit: 28bf7ae3c042d0d9d1fb8ac4d4fd464c137b9573

--- a/browser/themes/shared/tabbrowser/tabs.css
+++ b/browser/themes/shared/tabbrowser/tabs.css
@@ -6185,47 +6185,6 @@ Tab
 Groups
 *
 /
-tab
--
-group
-{
-/
-*
-*
-Let
-the
-tab
-bar
-flexbox
-distribute
-space
-between
-all
-tabs
-evenly
-regardless
-of
-*
-whether
-they
-are
-children
-of
-the
-tab
-bar
-directly
-or
-children
-of
-tab
-groups
-*
-/
-display
-:
-contents
-;
 /
 *
 *
@@ -6318,6 +6277,10 @@ group
 -
 line
 {
+display
+:
+none
+;
 background
 -
 color
@@ -6331,6 +6294,18 @@ tab
 group
 -
 color
+var
+(
+-
+-
+dragover
+-
+tab
+-
+group
+-
+color
+)
 )
 ;
 height
@@ -6407,7 +6382,85 @@ end
 0
 ;
 }
+tab
+-
+group
+&
+#
+tabbrowser
+-
+tabs
+[
+movingtab
+]
+:
+not
+(
+[
+movingtab
+-
+createGroup
+]
+)
+&
+:
+is
+(
+[
+selected
+]
+[
+multiselected
+]
+)
+{
+display
+:
+flex
+;
 }
+}
+tab
+-
+group
+{
+/
+*
+*
+Let
+the
+tab
+bar
+flexbox
+distribute
+space
+between
+all
+tabs
+evenly
+regardless
+of
+*
+whether
+they
+are
+children
+of
+the
+tab
+bar
+directly
+or
+children
+of
+tab
+groups
+*
+/
+display
+:
+contents
+;
 &
 [
 collapsed
