Bug 1926582 - Rename things related to moving multiselected tabs together to avoid confusion with tab groups. r=dwalker,tabbrowser-reviewers
Differential Revision: https://phabricator.services.mozilla.com/D226640

UltraBlame original commit: 851d64f4461e82aafb6975ad44bf8a1d9b0ee407

--- a/browser/themes/shared/tabbrowser/tabs.css
+++ b/browser/themes/shared/tabbrowser/tabs.css
@@ -2097,9 +2097,11 @@ multiselected
 )
 &
 [
-tab
+multiselected
 -
-grouping
+move
+-
+together
 ]
 &
 [
@@ -2127,9 +2129,11 @@ function
 }
 &
 [
-tab
+multiselected
 -
-grouping
+move
+-
+together
 ]
 [
 multiselected
