Bug 1926295 - Implement distinct selected and focused states for tab group color swatches. r=dwalker,tabbrowser-reviewers
Differential Revision: https://phabricator.services.mozilla.com/D226519

UltraBlame original commit: 05895b6b88b021f6800680d45f7fc542e8a26ffc

--- a/browser/themes/shared/tabbrowser/tabs.css
+++ b/browser/themes/shared/tabbrowser/tabs.css
@@ -7250,46 +7250,6 @@ position
 :
 absolute
 ;
-&
-:
-checked
-+
-.
-tab
--
-group
--
-editor
--
-swatch
-{
-outline
-:
-var
-(
--
--
-focus
--
-outline
-)
-;
-outline
--
-offset
-:
-var
-(
--
--
-focus
--
-outline
--
-offset
-)
-;
-}
 }
 .
 tab
@@ -7300,10 +7260,6 @@ editor
 -
 swatch
 {
-display
-:
-block
-;
 width
 :
 16px
@@ -7316,8 +7272,16 @@ border
 -
 radius
 :
-20
-%
+var
+(
+-
+-
+border
+-
+radius
+-
+small
+)
 ;
 background
 -
@@ -7351,6 +7315,112 @@ invert
 )
 )
 ;
+input
+:
+checked
++
+&
+{
+outline
+:
+var
+(
+-
+-
+focus
+-
+outline
+)
+;
+outline
+-
+color
+:
+currentColor
+;
+outline
+-
+offset
+:
+var
+(
+-
+-
+focus
+-
+outline
+-
+offset
+)
+;
+}
+input
+:
+focus
+-
+visible
++
+&
+{
+outline
+-
+color
+:
+var
+(
+-
+-
+focus
+-
+outline
+-
+color
+)
+;
+box
+-
+shadow
+:
+0
+0
+0
+calc
+(
+var
+(
+-
+-
+focus
+-
+outline
+-
+width
+)
+*
+3
+)
+color
+-
+mix
+(
+in
+srgb
+var
+(
+-
+-
+focus
+-
+outline
+-
+color
+)
+50
+%
+transparent
+)
+;
+}
 }
 .
 tab
