Backed out 2 changesets (bug 1926582, bug 1926394) for causing mochitests failures in browser_preserveTabPipIconOverlay.js. CLOSED TREE
Backed out changeset 851d64f4461e (bug 1926582)
Backed out changeset 79c92abcd174 (bug 1926394)

UltraBlame original commit: 233c9b04e5333828661aa8c3184a710562899bb8

--- a/browser/themes/shared/tabbrowser/tabs.css
+++ b/browser/themes/shared/tabbrowser/tabs.css
@@ -2017,6 +2017,12 @@ tabs
 [
 movingtab
 ]
+>
+#
+tabbrowser
+-
+arrowscrollbox
+>
 &
 :
 is
@@ -2077,6 +2083,12 @@ tabs
 [
 movingtab
 ]
+>
+#
+tabbrowser
+-
+arrowscrollbox
+>
 &
 [
 fadein
@@ -2097,11 +2109,9 @@ multiselected
 )
 &
 [
-multiselected
+tab
 -
-move
--
-together
+grouping
 ]
 &
 [
@@ -2129,11 +2139,9 @@ function
 }
 &
 [
-multiselected
+tab
 -
-move
--
-together
+grouping
 ]
 [
 multiselected
