--- a/mobile/android/android-components/components/feature/addons/src/main/res/layout/mozac_feature_addons_fragment_dialog_addon_permissions.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/layout/mozac_feature_addons_fragment_dialog_addon_permissions.xml
@@ -491,6 +491,68 @@ to
 /
 >
 <
+TextView
+android
+:
+id
+=
+"
++
+id
+/
+learn_more_link
+"
+android
+:
+layout_width
+=
+"
+wrap_content
+"
+android
+:
+layout_height
+=
+"
+wrap_content
+"
+android
+:
+layout_below
+=
+"
+id
+/
+allow_in_private_browsing
+"
+android
+:
+layout_alignStart
+=
+"
+id
+/
+title
+"
+android
+:
+layout_marginTop
+=
+"
+30dp
+"
+android
+:
+text
+=
+"
+string
+/
+mozac_feature_addons_permissions_dialog_learn_more
+"
+/
+>
+<
 androidx
 .
 recyclerview
