Bug 1926632 - Use destructive button tokens for title bar close button. r=desktop-theme-reviewers,emilio
Differential Revision: https://phabricator.services.mozilla.com/D226678

UltraBlame original commit: 0aabd7ca1d8602a6513b657f596adea9939e5013

--- a/browser/themes/linux/browser.css
+++ b/browser/themes/linux/browser.css
@@ -1882,12 +1882,33 @@ background
 -
 color
 :
-#
-d70022
+var
+(
+-
+-
+button
+-
+background
+-
+color
+-
+destructive
+)
 ;
 color
 :
-white
+var
+(
+-
+-
+button
+-
+text
+-
+color
+-
+destructive
+)
 ;
 }
 &
@@ -1905,8 +1926,37 @@ background
 -
 color
 :
-#
-ff0039
+var
+(
+-
+-
+button
+-
+background
+-
+color
+-
+destructive
+-
+active
+)
+;
+color
+:
+var
+(
+-
+-
+button
+-
+text
+-
+color
+-
+destructive
+-
+active
+)
 ;
 }
 media
