--- a/browser/themes/windows/browser.css
+++ b/browser/themes/windows/browser.css
@@ -1303,21 +1303,36 @@ close
 :
 hover
 {
-stroke
-:
-white
-;
 background
 -
 color
 :
-hsl
+var
 (
-355
-86
-%
-49
-%
+-
+-
+button
+-
+background
+-
+color
+-
+destructive
+)
+;
+stroke
+:
+var
+(
+-
+-
+button
+-
+text
+-
+color
+-
+destructive
 )
 ;
 &
@@ -1328,13 +1343,36 @@ background
 -
 color
 :
-hsl
+var
 (
-355
-82
-%
-69
-%
+-
+-
+button
+-
+background
+-
+color
+-
+destructive
+-
+active
+)
+;
+stroke
+:
+var
+(
+-
+-
+button
+-
+text
+-
+color
+-
+destructive
+-
+active
 )
 ;
 }
