Backed out changeset bb13832b86fc (bug 1926553) for causing pdfpaint failures CLOSED TREE
UltraBlame original commit: 96fed9cbbcd45ae5f39571b80d00a7c549b32600

--- a/toolkit/components/pdfjs/content/web/viewer.css
+++ b/toolkit/components/pdfjs/content/web/viewer.css
@@ -22912,8 +22912,14 @@ icon
 )
 ;
 }
+:
+is
+(
 #
 printButton
+#
+secondaryPrint
+)
 :
 :
 before
@@ -22934,8 +22940,14 @@ icon
 )
 ;
 }
+:
+is
+(
 #
 downloadButton
+#
+secondaryDownload
+)
 :
 :
 before
