--- a/browser/themes/shared/urlbar-searchbar.css
+++ b/browser/themes/shared/urlbar-searchbar.css
@@ -3234,6 +3234,87 @@ width
 }
 /
 *
+This
+label
+expresses
+the
+non
+secure
+status
+.
+However
+as
+the
+padlock
+icon
+is
+enough
+to
+tell
+the
+status
+to
+user
+hide
+the
+label
+when
+window
+gets
+small
+.
+Except
+this
+usage
+#
+identity
+-
+icon
+-
+label
+is
+used
+to
+show
+additional
+information
+that
+could
+not
+tell
+by
+only
+icons
+.
+*
+/
+#
+identity
+-
+box
+[
+pageproxystate
+=
+"
+valid
+"
+]
+.
+notSecureText
+#
+identity
+-
+icon
+-
+label
+{
+display
+:
+none
+;
+}
+/
+*
 Contenxtual
 identity
 labels
