Bug 1915351 part 9 - fix up existing tests for new behavior r=dlp-reviewers,handyman
The changes in the rest of this stack change the order that we do CA
in, and also eliminate some redundant calls, so fix up the tests to
reflect this.

Differential Revision: https://phabricator.services.mozilla.com/D224844

UltraBlame original commit: 574d567bbbf142b1d9aec80dfabdbb496a79b6cb

--- a/toolkit/components/contentanalysis/tests/browser/clipboard_paste_file.html
+++ b/toolkit/components/contentanalysis/tests/browser/clipboard_paste_file.html
@@ -165,7 +165,11 @@ dt
 types
 .
 length
+filePasteAllowed
+?
 2
+:
+0
 "
 Correct
 number
@@ -174,6 +178,11 @@ types
 "
 )
 ;
+if
+(
+filePasteAllowed
+)
+{
 /
 /
 TODO
@@ -231,6 +240,7 @@ Files
 "
 )
 ;
+}
 is
 (
 dt
@@ -384,7 +394,11 @@ dt
 items
 .
 length
+filePasteAllowed
+?
 1
+:
+0
 "
 Correct
 number
@@ -393,6 +407,11 @@ items
 "
 )
 ;
+if
+(
+filePasteAllowed
+)
+{
 is
 (
 dt
@@ -538,6 +557,11 @@ return
 file
 .
 name
+;
+}
+return
+"
+"
 ;
 }
 <
