--- a/toolkit/components/contentanalysis/tests/browser/clipboard_paste_inputandtextarea.html
+++ b/toolkit/components/contentanalysis/tests/browser/clipboard_paste_inputandtextarea.html
@@ -82,6 +82,35 @@ checkbox
 "
 >
 <
+label
+for
+=
+"
+isEmptyPaste
+"
+>
+Is
+empty
+paste
+?
+<
+/
+label
+>
+<
+input
+id
+=
+"
+isEmptyPaste
+"
+type
+=
+"
+checkbox
+"
+>
+<
 /
 div
 >
@@ -171,6 +200,20 @@ pasteAllowed
 .
 checked
 ;
+let
+isEmptyPaste
+=
+document
+.
+getElementById
+(
+"
+isEmptyPaste
+"
+)
+.
+checked
+;
 is
 (
 event
@@ -185,7 +228,13 @@ text
 plain
 '
 )
+(
 filePasteAllowed
+&
+&
+!
+isEmptyPaste
+)
 ?
 "
 Just
@@ -218,7 +267,11 @@ clipboardData
 types
 .
 length
+filePasteAllowed
+?
 1
+:
+0
 "
 Correct
 number
