Bug 1926120 - go back to also moving the toolbox in macOS fullscreen menubar animation, and add a border/shadow, r=desktop-theme-reviewers,emilio
Differential Revision: https://phabricator.services.mozilla.com/D226657

UltraBlame original commit: e509c25e4ec7ef804824ebe6e727490e77aa5f1f

--- a/browser/themes/shared/browser-shared.css
+++ b/browser/themes/shared/browser-shared.css
@@ -850,6 +850,43 @@ splitter
 :
 3
 ;
+/
+*
+on
+macOS
+the
+animation
+of
+the
+toolbox
+in
+fullscreen
+needs
+the
+toolbox
+to
+be
+higher
+*
+/
+-
+-
+browser
+-
+area
+-
+z
+-
+index
+-
+toolbox
+-
+while
+-
+animating
+:
+4
+;
 -
 -
 toolbarbutton
@@ -1458,6 +1495,117 @@ top
 ease
 -
 out
+;
+}
+/
+*
+While
+we
+are
+animating
+/
+have
+animated
+in
+the
+titlebar
+from
+macOS
+*
+the
+z
+-
+indices
+are
+subtly
+different
+to
+accommodate
+the
+sidebar
+better
+.
+*
+*
+We
+also
+give
+the
+toolbox
+a
+shadow
+and
+border
+in
+this
+case
+.
+*
+/
+&
+.
+fullscreen
+-
+with
+-
+menubar
+{
+z
+-
+index
+:
+var
+(
+-
+-
+browser
+-
+area
+-
+z
+-
+index
+-
+toolbox
+-
+while
+-
+animating
+)
+;
+box
+-
+shadow
+:
+var
+(
+-
+-
+content
+-
+area
+-
+shadow
+)
+;
+border
+-
+bottom
+-
+color
+:
+var
+(
+-
+-
+chrome
+-
+content
+-
+separator
+-
+color
+)
 ;
 }
 :
