Bug 1926394 - Update [movingtab] selectors to account for grouped tabs. r=jswinarton,dwalker,tabbrowser-reviewers
Differential Revision: https://phabricator.services.mozilla.com/D226618

UltraBlame original commit: 9ae61137c8c5085f2390e512440add7b50a1ff5e

--- a/browser/themes/shared/tabbrowser/tabs.css
+++ b/browser/themes/shared/tabbrowser/tabs.css
@@ -2017,12 +2017,6 @@ tabs
 [
 movingtab
 ]
->
-#
-tabbrowser
--
-arrowscrollbox
->
 &
 :
 is
@@ -2083,12 +2077,6 @@ tabs
 [
 movingtab
 ]
->
-#
-tabbrowser
--
-arrowscrollbox
->
 &
 [
 fadein
@@ -2109,9 +2097,11 @@ multiselected
 )
 &
 [
-tab
+multiselected
 -
-grouping
+move
+-
+together
 ]
 &
 [
@@ -2139,9 +2129,11 @@ function
 }
 &
 [
-tab
+multiselected
 -
-grouping
+move
+-
+together
 ]
 [
 multiselected
