Bug 1926062 - display the message even when the div is hidden r=cgopal
Differential Revision: https://phabricator.services.mozilla.com/D226440

UltraBlame original commit: e1289ad9e8efde05ffdeabac85416388f4cfbfdb

--- a/toolkit/components/aboutinference/content/aboutInference.html
+++ b/toolkit/components/aboutinference/content/aboutInference.html
@@ -417,11 +417,6 @@ main
 -
 content
 "
-id
-=
-"
-content
-"
 >
 <
 div
@@ -567,6 +562,14 @@ bar
 <
 /
 div
+>
+<
+div
+id
+=
+"
+content
+"
 >
 <
 !
@@ -1919,6 +1922,10 @@ div
 <
 /
 fieldset
+>
+<
+/
+div
 >
 <
 /
