Bug 1924534 - add fade out effect back to vertical tabs, r=desktop-theme-reviewers,tabbrowser-reviewers,dao
Differential Revision: https://phabricator.services.mozilla.com/D226714

UltraBlame original commit: 9a39bd45b1c9840ffee27c826c596156935ef77a

--- a/browser/themes/shared/tabbrowser/tabs.css
+++ b/browser/themes/shared/tabbrowser/tabs.css
@@ -7527,7 +7527,6 @@ inline
 size
 ;
 }
-}
 &
 :
 not
@@ -7796,6 +7795,139 @@ scaleX
 1
 )
 ;
+}
+}
+&
+[
+orient
+=
+"
+vertical
+"
+]
+{
+&
+:
+:
+part
+(
+overflow
+-
+start
+-
+indicator
+)
+&
+:
+:
+part
+(
+overflow
+-
+end
+-
+indicator
+)
+{
+background
+-
+image
+:
+linear
+-
+gradient
+(
+to
+top
+transparent
+0
+%
+var
+(
+-
+-
+toolbar
+-
+bgcolor
+)
+)
+;
+background
+-
+repeat
+:
+no
+-
+repeat
+;
+pointer
+-
+events
+:
+none
+;
+position
+:
+relative
+;
+height
+:
+16px
+;
+z
+-
+index
+:
+1
+;
+margin
+-
+block
+:
+0
+-
+16px
+;
+}
+/
+*
+Flip
+the
+fade
+at
+the
+bottom
+*
+/
+&
+:
+:
+part
+(
+overflow
+-
+end
+-
+indicator
+)
+{
+transform
+:
+scaleY
+(
+-
+1
+)
+;
+margin
+-
+block
+:
+-
+16px
+0
+;
+}
 }
 &
 [
