Bug 1926922 - Simplify view-source wrapping and syntax highlighting preferences. r=Gijs,dshin
Use -moz-bool-pref for them and simplify all the back and forth. Use
light-dark() while at it.

Differential Revision: https://phabricator.services.mozilla.com/D226798

UltraBlame original commit: 34fbba3505a464d2ac87b980699bee8f0a89bf08

--- a/layout/style/res/viewsource.css
+++ b/layout/style/res/viewsource.css
@@ -138,11 +138,39 @@ padding
 :
 8px
 ;
-}
-#
-viewsource
+/
+*
+stylelint
+-
+disable
+-
+next
+-
+line
+media
+-
+query
+-
+no
+-
+invalid
+*
+/
+media
+(
+-
+moz
+-
+bool
+-
+pref
+:
+"
+view_source
 .
-wrap
+wrap_long_lines
+"
+)
 {
 white
 -
@@ -160,6 +188,7 @@ break
 -
 word
 ;
+}
 }
 pre
 {
@@ -190,11 +219,13 @@ pre
 id
 ]
 :
+:
 before
 span
 [
 id
 ]
+:
 :
 before
 {
@@ -261,14 +292,44 @@ style
 normal
 ;
 }
+/
+*
+stylelint
+-
+disable
+-
+next
+-
+line
+media
+-
+query
+-
+no
+-
+invalid
+*
+/
+media
+(
+-
+moz
+-
+bool
+-
+pref
+:
+"
+view_source
 .
-highlight
+syntax_highlight
+"
+)
+{
 .
 start
 -
 tag
-.
-highlight
 .
 end
 -
@@ -276,7 +337,14 @@ tag
 {
 color
 :
+light
+-
+dark
+(
 purple
+#
+f55e5e
+)
 ;
 font
 -
@@ -286,13 +354,17 @@ bold
 ;
 }
 .
-highlight
-.
 comment
 {
 color
 :
+light
+-
+dark
+(
 green
+lightgreen
+)
 ;
 font
 -
@@ -301,29 +373,36 @@ style
 italic
 ;
 }
-.
-highlight
 .
 cdata
 {
 color
 :
+light
+-
+dark
+(
 #
 CC0066
+#
+f068ac
+)
 ;
 }
 .
-highlight
-.
 doctype
-.
-highlight
 .
 markupdeclaration
 {
 color
 :
+light
+-
+dark
+(
 steelblue
+lightgray
+)
 ;
 font
 -
@@ -332,8 +411,6 @@ style
 italic
 ;
 }
-.
-highlight
 .
 pi
 {
@@ -349,24 +426,21 @@ italic
 ;
 }
 .
-highlight
-.
 entity
 {
 color
 :
+light
+-
+dark
+(
 #
 FF4500
-;
-font
--
-weight
-:
-normal
+#
+f18a65
+)
 ;
 }
-.
-highlight
 .
 text
 {
@@ -377,8 +451,6 @@ weight
 normal
 ;
 }
-.
-highlight
 .
 attribute
 -
@@ -392,15 +464,20 @@ bold
 ;
 }
 .
-highlight
-.
 attribute
 -
 value
 {
 color
 :
+light
+-
+dark
+(
 blue
+#
+97bbff
+)
 ;
 font
 -
@@ -409,42 +486,6 @@ weight
 normal
 ;
 }
-span
-:
-not
-(
-.
-error
-)
-a
-:
-not
-(
-.
-error
-)
-{
-unicode
--
-bidi
-:
-embed
-;
-}
-span
-[
-id
-]
-{
-unicode
--
-bidi
-:
-isolate
-;
-}
-.
-highlight
 .
 error
 {
@@ -484,93 +525,38 @@ red
 5px
 ;
 }
-media
-(
-prefers
--
-color
--
-scheme
+}
+span
 :
-dark
+not
+(
+.
+error
+)
+a
+:
+not
+(
+.
+error
 )
 {
-.
-highlight
-.
-start
+unicode
 -
-tag
-.
-highlight
-.
-end
+bidi
+:
+embed
+;
+}
+span
+[
+id
+]
+{
+unicode
 -
-tag
-{
-color
+bidi
 :
-#
-f55e5e
+isolate
 ;
-}
-.
-highlight
-.
-comment
-{
-color
-:
-lightgreen
-;
-}
-.
-highlight
-.
-cdata
-{
-color
-:
-#
-f068ac
-;
-}
-.
-highlight
-.
-doctype
-.
-highlight
-.
-markupdeclaration
-{
-color
-:
-lightgray
-;
-}
-.
-highlight
-.
-entity
-{
-color
-:
-#
-f18a65
-;
-}
-.
-highlight
-.
-attribute
--
-value
-{
-color
-:
-#
-97bbff
-;
-}
 }
