Bug 1926056 - Newtab new ad size and UI variants r=home-newtab-reviewers,nbarrett,amy
Differential Revision: https://phabricator.services.mozilla.com/D226543

UltraBlame original commit: a45040fd76714166954dff37f6664a42dcb584b1

--- a/browser/components/newtab/content-src/components/DiscoveryStreamComponents/CardGrid/_CardGrid.scss
+++ b/browser/components/newtab/content-src/components/DiscoveryStreamComponents/CardGrid/_CardGrid.scss
@@ -712,6 +712,38 @@ gap
 }
 &
 .
+ad
+-
+sizing
+-
+variant
+-
+a
+&
+.
+ad
+-
+sizing
+-
+variant
+-
+b
+{
+row
+-
+gap
+:
+24px
+;
+column
+-
+gap
+:
+18px
+;
+}
+&
+.
 ds
 -
 card
