--- a/browser/themes/shared/browser-shared.css
+++ b/browser/themes/shared/browser-shared.css
@@ -2427,12 +2427,13 @@ the
 first
 visible
 toolbar
+.
 *
 /
 #
-nav
+navigator
 -
-bar
+toolbox
 :
 not
 (
@@ -2442,6 +2443,11 @@ tabs
 hidden
 ]
 )
+>
+#
+nav
+-
+bar
 >
 :
 is
@@ -2584,6 +2590,187 @@ overflow
 :
 hidden
 ;
+/
+*
+For
+linux
+and
+windows
+when
+temporarily
+showing
+the
+menu
+bar
+make
+it
+at
+least
+as
+tall
+as
+the
+tab
+toolbar
+such
+that
+the
+window
+controls
+don
+'
+t
+appear
+to
+move
+up
+.
+For
+MacOS
+autohide
+is
+never
+true
+on
+the
+menubar
+.
+*
+/
+:
+root
+[
+tabsintitlebar
+]
+#
+navigator
+-
+toolbox
+:
+not
+(
+[
+tabs
+-
+hidden
+]
+)
+>
+&
+{
+min
+-
+height
+:
+calc
+(
+var
+(
+-
+-
+tab
+-
+min
+-
+height
+)
++
+2
+*
+var
+(
+-
+-
+tab
+-
+block
+-
+margin
+)
+)
+;
+}
+/
+*
+adjust
+the
+height
+of
+the
+auto
+-
+hiding
+toolbar
+menubar
+when
+the
+tabstrip
+is
+hidden
+and
+we
+need
+to
+match
+the
+height
+of
+the
+nav
+-
+bar
+.
+*
+/
+:
+root
+[
+tabsintitlebar
+]
+#
+navigator
+-
+toolbox
+[
+tabs
+-
+hidden
+]
+>
+&
+{
+min
+-
+height
+:
+calc
+(
+var
+(
+-
+-
+urlbar
+-
+min
+-
+height
+)
++
+2
+*
+var
+(
+-
+-
+urlbar
+-
+padding
+-
+block
+)
+)
+;
+}
 &
 [
 inactive
