--- a/browser/themes/shared/urlbar-searchbar.css
+++ b/browser/themes/shared/urlbar-searchbar.css
@@ -100,6 +100,16 @@ inline
 :
 5px
 ;
+-
+-
+urlbar
+-
+padding
+-
+block
+:
+4px
+;
 }
 #
 urlbar
@@ -578,7 +588,16 @@ padding
 -
 block
 :
-4px
+var
+(
+-
+-
+urlbar
+-
+padding
+-
+block
+)
 ;
 margin
 -
