Bug 1926914 - Handle display and edit toolbar spacing in app. r=android-reviewers,jonalmeida
Differential Revision: https://phabricator.services.mozilla.com/D226808

UltraBlame original commit: 1fe48bee5ea49615c85eb43e193896a3a275bd82

--- a/mobile/android/focus-android/app/src/main/res/layout/fragment_urlinput.xml
+++ b/mobile/android/focus-android/app/src/main/res/layout/fragment_urlinput.xml
@@ -630,6 +630,34 @@ horizontal
 "
 >
 <
+Space
+android
+:
+id
+=
+"
++
+id
+/
+browserToolbarStartSpace
+"
+android
+:
+layout_width
+=
+"
+8dp
+"
+android
+:
+layout_height
+=
+"
+match_parent
+"
+/
+>
+<
 mozilla
 .
 components
