Bug 1926824 - Remove unneeded selectors in viewsource.css. r=dshin
After the previous patches we never set the line for span elements, we
always create a <pre>.

Differential Revision: https://phabricator.services.mozilla.com/D226797

UltraBlame original commit: fd1ad91ca6edeb83aea7b9d03a1eca406248cafc

--- a/layout/style/res/viewsource.css
+++ b/layout/style/res/viewsource.css
@@ -213,15 +213,7 @@ margin
 0
 5ch
 ;
-}
-pre
-[
-id
-]
-:
-:
-before
-span
+&
 [
 id
 ]
@@ -291,6 +283,7 @@ style
 :
 normal
 ;
+}
 }
 /
 *
@@ -546,17 +539,5 @@ unicode
 bidi
 :
 embed
-;
-}
-span
-[
-id
-]
-{
-unicode
--
-bidi
-:
-isolate
 ;
 }
