Backed out changeset fd1ad91ca6ed (bug 1926824) for causing reftest failures. CLOSED TREE
UltraBlame original commit: 835d93c1dc201b16b41de7eb9b7f6ab8ba8f51ee

--- a/layout/style/res/viewsource.css
+++ b/layout/style/res/viewsource.css
@@ -213,7 +213,15 @@ margin
 0
 5ch
 ;
-&
+}
+pre
+[
+id
+]
+:
+:
+before
+span
 [
 id
 ]
@@ -283,7 +291,6 @@ style
 :
 normal
 ;
-}
 }
 /
 *
@@ -539,5 +546,17 @@ unicode
 bidi
 :
 embed
+;
+}
+span
+[
+id
+]
+{
+unicode
+-
+bidi
+:
+isolate
 ;
 }
