Bug 1926809 - Make inline-block-slice-7 reftest stable by removing usage of viewport-relative units. r=dholbert
Change all the viewport-relative units to inch so that it is more stable in
reftest-paged environment. In addition, add `margin-block-start` to `.after` in
the reference so that we can use `==` rather than `!=` to compare the test.

Differential Revision: https://phabricator.services.mozilla.com/D226959

UltraBlame original commit: e47c47c1231f63fa172f771bd2b7f19d105ee911

--- a/layout/reftests/pagination/inline-block-slice-7-ref.html
+++ b/layout/reftests/pagination/inline-block-slice-7-ref.html
@@ -4,6 +4,38 @@ DOCTYPE
 html
 >
 <
+!
+-
+-
+Any
+copyright
+is
+dedicated
+to
+the
+Public
+Domain
+.
+http
+:
+/
+/
+creativecommons
+.
+org
+/
+publicdomain
+/
+zero
+/
+1
+.
+0
+/
+-
+-
+>
+<
 html
 class
 =
@@ -93,7 +125,7 @@ block
 -
 size
 :
-40vh
+1in
 ;
 }
 .
@@ -107,13 +139,15 @@ inline
 -
 size
 :
-50vw
+2
+.
+5in
 ;
 block
 -
 size
 :
-210vh
+3in
 ;
 border
 :
@@ -144,7 +178,9 @@ block
 -
 size
 :
-220vh
+3
+.
+25in
 ;
 /
 *
@@ -163,6 +199,39 @@ ib
 .
 after
 {
+margin
+-
+block
+-
+start
+:
+calc
+(
+0
+.
+25in
+-
+5px
+)
+;
+/
+*
+scrollable
+overflow
+0
+.
+25in
+minus
+border
+-
+block
+-
+end
+-
+width
+5px
+*
+/
 display
 :
 block
@@ -171,13 +240,17 @@ inline
 -
 size
 :
-60vw
+2
+.
+5in
 ;
 block
 -
 size
 :
-10vh
+0
+.
+25in
 ;
 border
 :
@@ -219,7 +292,9 @@ inline
 -
 size
 :
-50vw
+2
+.
+5in
 ;
 border
 :
