--- a/layout/reftests/pagination/inline-block-slice-7.html
+++ b/layout/reftests/pagination/inline-block-slice-7.html
@@ -4,6 +4,38 @@ DOCTYPE
 html
 >
 <
+!
+-
+-
+Any
+copyright
+is
+dedicated
+to
+the
+Public
+Domain
+.
+http
+:
+/
+/
+creativecommons
+.
+org
+/
+publicdomain
+/
+zero
+/
+1
+.
+0
+/
+-
+-
+>
+<
 html
 class
 =
@@ -93,7 +125,7 @@ block
 -
 size
 :
-40vh
+1in
 ;
 }
 .
@@ -109,13 +141,15 @@ inline
 -
 size
 :
-50vw
+2
+.
+5in
 ;
 block
 -
 size
 :
-210vh
+3in
 ;
 vertical
 -
@@ -139,7 +173,9 @@ block
 -
 size
 :
-220vh
+3
+.
+25in
 ;
 /
 *
@@ -166,13 +202,17 @@ inline
 -
 size
 :
-60vw
+2
+.
+5in
 ;
 block
 -
 size
 :
-10vh
+0
+.
+25in
 ;
 border
 :
@@ -197,6 +237,49 @@ head
 >
 <
 body
+>
+<
+!
+-
+-
+-
+-
+Note
+that
+the
+correct
+rendering
+is
+that
+the
+grey
+block
+placed
+-
+-
+immediately
+below
+the
+black
+bottom
+border
+.
+Our
+fragmentation
+-
+-
+fallback
+mechanism
+can
+'
+t
+handle
+this
+case
+correctly
+.
+-
+-
 >
 X
 <
