Bug 1926932 - Add assets for future enabling Copilot r=ngrato,fluent-reviewers
Add icon and strings and update configs. Update huggingchat string.

Differential Revision: https://phabricator.services.mozilla.com/D226816

UltraBlame original commit: 5defb130af43fa6642e461df730c6175b05bb45a

--- a/browser/components/genai/chat.css
+++ b/browser/components/genai/chat.css
@@ -733,6 +733,26 @@ color
 }
 &
 .
+copilot
+{
+background
+-
+image
+:
+url
+(
+assets
+/
+brands
+/
+copilot
+.
+svg
+)
+;
+}
+&
+.
 gemini
 {
 background
