--- a/layout/reftests/pagination/inline-block-slice-7-ref.html
+++ b/layout/reftests/pagination/inline-block-slice-7-ref.html
@@ -125,7 +125,7 @@ block
 -
 size
 :
-40vh
+1in
 ;
 }
 .
@@ -139,13 +139,15 @@ inline
 -
 size
 :
-50vw
+2
+.
+5in
 ;
 block
 -
 size
 :
-210vh
+3in
 ;
 border
 :
@@ -176,7 +178,9 @@ block
 -
 size
 :
-220vh
+3
+.
+25in
 ;
 /
 *
@@ -195,6 +199,39 @@ ib
 .
 after
 {
+margin
+-
+block
+-
+start
+:
+calc
+(
+0
+.
+25in
+-
+5px
+)
+;
+/
+*
+scrollable
+overflow
+0
+.
+25in
+minus
+border
+-
+block
+-
+end
+-
+width
+5px
+*
+/
 display
 :
 block
@@ -203,13 +240,17 @@ inline
 -
 size
 :
-60vw
+2
+.
+5in
 ;
 block
 -
 size
 :
-10vh
+0
+.
+25in
 ;
 border
 :
@@ -251,7 +292,9 @@ inline
 -
 size
 :
-50vw
+2
+.
+5in
 ;
 border
 :
