Bug 1923858 -  The AI shortcut is barely visible with the Alpenglow theme r=Mardak,desktop-theme-reviewers,emilio
Changed the background color to the shortcut

Differential Revision: https://phabricator.services.mozilla.com/D226845

UltraBlame original commit: 50df2b17f7dcf1f072803201ddd29bd941da1237

--- a/browser/themes/shared/tabbrowser/content-area.css
+++ b/browser/themes/shared/tabbrowser/content-area.css
@@ -1535,9 +1535,9 @@ var
 (
 -
 -
-toolbar
+arrowpanel
 -
-bgcolor
+background
 )
 url
 (
@@ -1713,25 +1713,6 @@ offset
 )
 -
 28px
-)
-;
-}
-&
-[
-active
-]
-{
-color
-:
-var
-(
--
--
-color
--
-accent
--
-primary
 )
 ;
 }
