Bug 1843320 - [devtools] Turn WhyPaused into a live region and add paused location information r=nchevobbe,devtools-reviewers,accessibility-frontend-reviewers,nlapre
Differential Revision: https://phabricator.services.mozilla.com/D223928

UltraBlame original commit: 3c72b46ec8e4850d388ec657a426a6f70f3ac2b9

--- a/devtools/client/debugger/src/components/variables.css
+++ b/devtools/client/debugger/src/components/variables.css
@@ -498,6 +498,36 @@ hsl
 )
 )
 ;
+-
+-
+paused
+-
+error
+-
+color
+:
+light
+-
+dark
+(
+var
+(
+-
+-
+red
+-
+70
+)
+var
+(
+-
+-
+red
+-
+20
+)
+)
+;
 }
 /
 *
