--- a/devtools/client/debugger/src/components/SecondaryPanes/WhyPaused.css
+++ b/devtools/client/debugger/src/components/SecondaryPanes/WhyPaused.css
@@ -79,23 +79,6 @@ content
 :
 center
 ;
-border
--
-bottom
-:
-1px
-solid
-var
-(
--
--
-theme
--
-splitter
--
-color
-)
-;
 background
 -
 color
@@ -132,16 +115,6 @@ cursor
 :
 default
 ;
-min
--
-height
-:
-44px
-;
-padding
-:
-6px
-;
 white
 -
 space
@@ -154,6 +127,82 @@ weight
 :
 bold
 ;
+&
+:
+not
+(
+.
+hidden
+)
+{
+min
+-
+height
+:
+44px
+;
+border
+-
+bottom
+:
+1px
+solid
+var
+(
+-
+-
+theme
+-
+splitter
+-
+color
+)
+;
+padding
+:
+6px
+;
+}
+/
+*
+The
+component
+is
+always
+rendered
+as
+it
+'
+s
+an
+aria
+live
+region
+and
+always
+need
+to
+be
+in
+the
+DOM
+for
+it
+to
+properly
+announce
+changes
+*
+/
+&
+.
+hidden
+{
+opacity
+:
+0
+;
+}
 }
 .
 why
@@ -248,43 +297,7 @@ why
 -
 paused
 .
-message
-{
-font
--
-style
-:
-italic
-;
-font
--
-weight
-:
-100
-;
-}
-.
-why
--
-paused
-.
-mutationNode
-{
-font
--
-weight
-:
-normal
-;
-}
-.
-why
--
-paused
-.
-message
-.
-warning
+location
 {
 color
 :
@@ -292,15 +305,33 @@ var
 (
 -
 -
-theme
+paused
 -
-graphs
--
-full
--
-red
+color
 )
 ;
+padding
+-
+block
+:
+2px
+;
+}
+.
+why
+-
+paused
+:
+is
+(
+.
+location
+.
+message
+.
+mutationNode
+)
+{
 font
 -
 family
@@ -318,9 +349,38 @@ family
 ;
 font
 -
+weight
+:
+normal
+;
+font
+-
 size
 :
 10px
+;
+}
+.
+why
+-
+paused
+.
+message
+.
+error
+{
+color
+:
+var
+(
+-
+-
+paused
+-
+error
+-
+color
+)
 ;
 font
 -
