--- a/devtools/client/themes/chart.css
+++ b/devtools/client/themes/chart.css
@@ -84,45 +84,12 @@ translateZ
 1px
 )
 ;
-}
-.
-theme
+color
+:
+light
 -
 dark
-.
-generic
--
-chart
--
-container
-{
-color
-:
-var
 (
--
--
-theme
--
-selection
--
-color
-)
-;
-}
-.
-theme
--
-light
-.
-generic
--
-chart
--
-container
-{
-color
-:
 var
 (
 -
@@ -134,6 +101,17 @@ text
 color
 -
 alt
+)
+var
+(
+-
+-
+theme
+-
+selection
+-
+color
+)
 )
 ;
 }
@@ -195,44 +173,12 @@ cursor
 :
 pointer
 ;
-}
-.
-theme
+stroke
+:
+light
 -
 dark
-.
-pie
--
-chart
--
-slice
-{
-stroke
-:
-rgba
 (
-0
-0
-0
-0
-.
-2
-)
-;
-}
-.
-theme
--
-light
-.
-pie
--
-chart
--
-slice
-{
-stroke
-:
 rgba
 (
 255
@@ -242,7 +188,35 @@ rgba
 .
 8
 )
+rgba
+(
+0
+0
+0
+0
+.
+2
+)
+)
 ;
+&
+[
+largest
+]
+{
+stroke
+:
+light
+-
+dark
+(
+#
+000
+#
+fff
+)
+;
+}
 }
 .
 theme
@@ -263,31 +237,6 @@ stroke
 width
 :
 2px
-;
-stroke
-:
-#
-fff
-;
-}
-.
-theme
--
-light
-.
-pie
--
-chart
--
-slice
-[
-largest
-]
-{
-stroke
-:
-#
-000
 ;
 }
 .
@@ -315,39 +264,17 @@ events
 :
 none
 ;
-}
-.
-theme
+fill
+:
+light
 -
 dark
-.
-pie
--
-chart
--
-label
-{
-fill
-:
-#
-000
-;
-}
-.
-theme
--
-light
-.
-pie
--
-chart
--
-label
-{
-fill
-:
+(
 #
 fff
+#
+000
+)
 ;
 }
 .
@@ -750,22 +677,22 @@ padding
 1px
 0px
 ;
-}
-.
-theme
--
-dark
-.
-table
--
-chart
--
-summary
--
-label
-{
 color
 :
+light
+-
+dark
+(
+var
+(
+-
+-
+theme
+-
+body
+-
+color
+)
 var
 (
 -
@@ -776,32 +703,6 @@ selection
 -
 color
 )
-;
-}
-.
-theme
--
-light
-.
-table
--
-chart
--
-summary
--
-label
-{
-color
-:
-var
-(
--
--
-theme
--
-body
--
-color
 )
 ;
 }
