Bug 1916391 - [devtools] Adapt netmonitor charts to High Contrast Mode. r=devtools-reviewers,bomsy.
Adapt text color, avoid tweaking opacity on hover.

Differential Revision: https://phabricator.services.mozilla.com/D226787

UltraBlame original commit: 5428f34f96e1fa4e3e9afc9f2eb4af04d8e47d8a

--- a/devtools/client/themes/chart.css
+++ b/devtools/client/themes/chart.css
@@ -108,9 +108,11 @@ var
 -
 theme
 -
-selection
+text
 -
 color
+-
+strong
 )
 )
 ;
@@ -426,6 +428,33 @@ cursor
 pointer
 ;
 }
+/
+*
+Only
+adjust
+opacity
+when
+not
+in
+high
+Contrast
+Mode
+*
+/
+:
+root
+:
+not
+(
+[
+forced
+-
+colors
+-
+active
+]
+)
+{
 .
 table
 -
@@ -556,6 +585,51 @@ opacity
 0
 .
 4
+;
+}
+}
+/
+*
+Add
+specific
+hover
+style
+for
+High
+Contrast
+Mode
+*
+/
+:
+root
+[
+forced
+-
+colors
+-
+active
+]
+tbody
+.
+table
+-
+chart
+-
+row
+:
+hover
+{
+outline
+:
+1px
+solid
+SelectedItem
+;
+outline
+-
+offset
+:
+2px
 ;
 }
 .
@@ -699,9 +773,11 @@ var
 -
 theme
 -
-selection
+text
 -
 color
+-
+strong
 )
 )
 ;
