Bug 1926878 - [devtools] Refactor Start Performance Analysis button style. r=devtools-reviewers,bomsy.
The button had a children where we were handling the background image,
which is not the pattern we use for other icons.
The element is removed ans we defined the background image on the
button before pseudo element (everything is then handled thanks to the devtools-button class).
This makes the button look correct in High Contrast Mode.

Differential Revision: https://phabricator.services.mozilla.com/D226789

UltraBlame original commit: 25f9eeda1f933f08e492ce5d3f0b4ac266ee4c9a

--- a/devtools/client/netmonitor/src/assets/styles/StatusBar.css
+++ b/devtools/client/netmonitor/src/assets/styles/StatusBar.css
@@ -476,26 +476,14 @@ end
 :
 1em
 ;
-}
-.
-requests
--
-list
--
-network
--
-summary
--
-button
->
-.
-summary
--
-info
--
-icon
+&
+:
+:
+before
 {
 background
+-
+image
 :
 url
 (
@@ -515,18 +503,6 @@ stopwatch
 .
 svg
 )
-no
--
-repeat
-;
--
-moz
--
-context
--
-properties
-:
-fill
 ;
 fill
 :
@@ -536,48 +512,10 @@ var
 -
 theme
 -
-toolbar
+icon
 -
 color
 )
 ;
-width
-:
-16px
-;
-height
-:
-16px
-;
-opacity
-:
-0
-.
-8
-;
 }
-.
-requests
--
-list
--
-network
--
-summary
--
-button
-:
-hover
->
-.
-summary
--
-info
--
-icon
-{
-opacity
-:
-1
-;
 }
