Bug 1926020 - Change browsing mode button into toggle button. r=android-reviewers,tchoh
Differential Revision: https://phabricator.services.mozilla.com/D226709

UltraBlame original commit: ef3696b8819b58719a025a2a081a8cccbc24f4e0

--- a/mobile/android/fenix/app/src/main/res/layout/fragment_home.xml
+++ b/mobile/android/fenix/app/src/main/res/layout/fragment_home.xml
@@ -351,7 +351,22 @@ scroll
 "
 >
 <
-ImageButton
+!
+-
+-
+This
+is
+a
+toggle
+button
+for
+accessibility
+reasons
+-
+-
+>
+<
+ToggleButton
 android
 :
 id
@@ -420,11 +435,23 @@ contentDescription
 "
 string
 /
-content_description_private_browsing_button
+content_description_private_browsing
 "
-app
+android
 :
-srcCompat
+textOff
+=
+"
+"
+android
+:
+textOn
+=
+"
+"
+android
+:
+drawableTop
 =
 "
 drawable
