--- a/browser/themes/shared/browser-shared.css
+++ b/browser/themes/shared/browser-shared.css
@@ -4284,9 +4284,9 @@ temporary
 )
 &
 #
-nav
+navigator
 -
-bar
+toolbox
 :
 not
 (
@@ -4296,6 +4296,10 @@ tabs
 hidden
 ]
 )
+#
+nav
+-
+bar
 >
 &
 {
@@ -4305,14 +4309,18 @@ none
 ;
 }
 #
-nav
+navigator
 -
-bar
+toolbox
 [
 tabs
 -
 hidden
 ]
+#
+nav
+-
+bar
 >
 &
 {
